<resources>
    <string name="app_name">GreenGarden App</string>

    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="TandC">I agree to the terms and condition of the AppCompany</string>
    <string name="error_view">Error View</string>
    <string name="password">Password</string>
    <string name="email_hint">user@domain.com</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_verify_again">Send Verify Email Again</string>
    <string name="enterEmailId">Enter the registered Email ID</string>
    <string name="reset_password">Reset Password</string>
    <string name="user_domain_com">user@domain.com</string>
    <string name="text_label_1">Community</string>
    <string name="text_label_2">Profile</string>
    <string name="delete_success">Images was deleted!</string>
    <string name="delete_failure">Image deletion failed</string>
    <string name="error">Error finding image</string>
    <string name="go">GO</string>
    <string name="permission_denied">Permission denied</string>
    <string name="imageview_description">The imageview that contains the emojified picture</string>

</resources>