<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".SignInActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/header"
        android:text="@string/sign_in"/>



        <TextView
            android:id="@+id/signInEmailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BoldStyle"
            android:textColor="@color/green"

            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/signInEmailTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/SignInPasswordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            style="@style/BoldStyle"
            android:textColor="@color/green"

            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/signInPasswordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:targetApi="o" />

    <Button
        android:id="@+id/signInButton"
        style="@style/buttons"
        android:layout_width="106dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:text="@string/sign_in" />

        <TextView
            android:id="@+id/textview4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BoldStyle"
            android:text=" Forgot Password?"
            android:textColor="@color/Green"
             />



        <TextView
            android:id="@+id/signInErrorView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/error_view" />
    <Button
        android:id="@+id/verifyEmailAgainButton"
        style="@style/buttons"
        android:layout_width="264dp"
        android:layout_height="27dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/email_verify_again" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Don't have an account\? Please Sign up"
                android:textColor="@color/green"
                android:textSize="17dp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/signUp"
                style="@style/buttons"
                android:layout_width="237dp"
                android:layout_height="38dp"
                android:layout_above="@id/welcomeSignInButton"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="Create new Account" />
        </LinearLayout>

</LinearLayout>
